# server-cli

./: pyproject.toml
cli/: cli.py  lifecycle.yaml
